Made our webpage a website

--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
         <a href="https://www.ebay.com/b/Antique-Maps-Atlases-Globes/37958/bn_1856736">Click here for less neat maps</a>
     </p>
 
+    <div>
+        <a href="LessNeatMaps.html">Less Neat Maps</a>
+    </div>
+
     <p>
     <a href="http://google.com">Click here to learn about ninjas</a>
     </p>
