--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <title>www.NeatOldMapsOnTheInternet.com</title>
 </head>   
-   <body>
-    <h1>www.NeatOldMapsOnTheInternet.com</h1>
+<center>
+<body>
+    <h1> <font color="red">www.NeatOldMapsOnTheInternet.com</font></h1>
 
     <p>
         Your one-stop-shop-for  
@@ -24,44 +25,29 @@
 
     <hr>
 
-    <p>
-        This map is pretty neat, huh?
-    </p>
-
-    <div>
-        <img src="Neat Map 1.JPG">
-    </div>
+    <table style="width:100%">
+        <tr>
+          <th>French Indochina (1887-1954)</th>
+          <th>Reunified, pre-Doi Moi, Vietnam</th>
+          <th>Neat Odds and Ends</th>
+        </tr>
+        <tr>
+          <td><img src="Neat Map 1.JPG" alt="Neat Map 1" width="604.8" length="453.6"></td>
+          <td><img src="Neat Chart 1.JPG" alt="Neat Map 1" width="453.6" length="604.8" style="transform:rotate(90deg);"></td>
+          <td>50</td>
+        </tr>
+      </table>
 
     <hr>
-
-    <p>
-        This one isn't a map, but it's still pretty neat, right?
-    </p>
-
-    <pre>&#9</pre>
-    <pre>&#9</pre>
-    <pre>&#9</pre>
-    <pre>&#9</pre>
-    <pre>&#9</pre>
-    <pre>&#9</pre>
-    <pre>&#9</pre>
-    <pre>&#9</pre>
-    <pre>&#9</pre>
-
-    <p>
-        <img src="Neat Chart 1.JPG" style="transform:rotate(90deg);">
-    </p>
-
-    <p>
-        <a href="https://www.ebay.com/b/Antique-Maps-Atlases-Globes/37958/bn_1856736">Click here for less neat maps</a>
-    </p>
-
+    
     <div>
-        <a href="LessNeatMaps.html">Less Neat Maps</a>
+        <a href="LessNeatMaps.html">A Bit Less Neat Maps</a>
     </div>
 
     <p>
-    <a href="http://google.com">Click here to learn about ninjas</a>
+        <a href="https://www.ebay.com/b/Antique-Maps-Atlases-Globes/37958/bn_1856736">Much Less Neat Maps</a>
     </p>
+
 </body>
+</center>   
 </html>
