--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
           <th>Neat Odds and Ends</th>
         </tr>
         <tr>
-          <td><img src="Neat Map 1.JPG" alt="Neat Map 1" width="604.8" length="453.6"></td>
-          <td><img src="Neat Chart 1.JPG" alt="Neat Map 1" width="453.6" length="604.8" style="transform:rotate(90deg);"></td>
-          <td>50</td>
+          <td><img src="Neat Map 1.JPG" alt="Neat Map 1" width="403.2" length="302.4"></td>
+          <td><img src="Neat Map 6.JPG" alt="Neat Map 6" width="302.4" length="403.2" style="transform:rotate(90deg);"></td>
+          <td><img src="Neat Chart 1.JPG" alt="Neat Chart 1" width="302.4" length="403.2" style="transform:rotate(90deg);"></td>
         </tr>
       </table>
 
     <hr>
-    
+
     <div>
         <a href="LessNeatMaps.html">A Bit Less Neat Maps</a>
     </div>
