--- a/index.html
+++ b/index.html
@@ -1,53 +1,73 @@
 <!DOCTYPE html> 
 <html>
 <head>
-    <title>www.NeatOldMapsOnTheInternet.com</title>
-</head>   
-<center>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">  
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="mapstyles.css">
+    <link href="https://fonts.googleapis.com/css?family=Gelasio|PT+Serif|Playfair+Display&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+    <title>Neat Old Maps On The Internet</title>
+  </head>   
+
 <body>
-    <h1> <font color="red">www.NeatOldMapsOnTheInternet.com</font></h1>
-
-    <p>
-        Your one-stop-shop-for  
-        <strong>the</strong> 
-        <em>neatest</em>
-        maps on the internet
-    </p>
-
-    <p>
-        Most Important Map Characteristics
-    <ol>
-        <li>Old</li>
-        <li>Unique</li>
-        <li>About something neat</li>
-    </ol>
-    </p>
-
-    <hr>
-
-    <table style="width:100%">
-        <tr>
-          <th>French Indochina (1887-1954)</th>
-          <th>Reunified, pre-Doi Moi, Vietnam</th>
-          <th>Neat Odds and Ends</th>
-        </tr>
-        <tr>
-          <td><img src="Neat Map 1.JPG" alt="Neat Map 1" width="403.2" length="302.4"></td>
-          <td><img src="Neat Map 6.JPG" alt="Neat Map 6" width="302.4" length="403.2" style="transform:rotate(90deg);"></td>
-          <td><img src="Neat Chart 1.JPG" alt="Neat Chart 1" width="302.4" length="403.2" style="transform:rotate(90deg);"></td>
-        </tr>
-      </table>
-
-    <hr>
-
-    <div>
-        <a href="LessNeatMaps.html">A Bit Less Neat Maps</a>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#"></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+  
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="index.html">
+            <i class="fas fa-home"></i>Home 
+            <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Collection
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="vietnam.html">Vietnam</a>
+            <a class="dropdown-item" href="polarexploration.html">Polar Exploration</a>
+          </div>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="contact.html">Contact</a>
+        </li>
+      </ul>
+      <form class="form-inline my-2 my-lg-0">
+        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+      </form>
     </div>
-
-    <p>
-        <a href="https://www.ebay.com/b/Antique-Maps-Atlases-Globes/37958/bn_1856736">Much Less Neat Maps</a>
-    </p>
-
+  </nav>  
+  
+  <div class="jumbotron">
+    <h1 class="display-4">Neat Old Maps On The Internet</h1>
+    <p class="lead">Rare antiquarian maps, documents, and books </p>
+    <hr class="my-4">
+  </div>
+  
+  <div class="container">
+  <div class="row mt-4">
+    <div class="col-sm-4 text-center">
+      <h5>About</h5>
+      <p>Sample text sample text Sample text sample text Sample text sample text Sample text sample text Sample text
+        sample text </p>
+    </div>
+    <div class="col-sm-4 text-center">
+      <td><img src="Neat Map 1.JPG"> </td>
+    </div>
+  </div>
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+  integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+  integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+  integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </body>
-</center>   
+
 </html>
