--- a/index.html
+++ b/index.html
@@ -55,8 +55,7 @@
   <div class="row mt-4">
     <div class="col-sm-4 text-center">
       <h5>About</h5>
-      <p>Sample text sample text Sample text sample text Sample text sample text Sample text sample text Sample text
-        sample text </p>
+      <p>Catalogued on this site is a collection of maps, documents, and books collected over eight years living in Southeast Asia. The majority of the collection focuses on French colonial Vietnam zoning and management maps, with a few choice items on polar exploration included for good measure.   </p>
     </div>
     <div class="col-sm-4 text-center">
       <td><img src="Neat Map 1.JPG"> </td>
